# foodprep-planner-v2

./: Makefile  README.md  add_product_and_meals.py  alembic.ini  compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: containers.py  main.py  settings.py
backend/src/api/: __init__.py  endpoints.py  models.py
backend/src/api/endpoints/: __init__.py  meals.py  products.py
backend/src/database/: __init__.py  client.py  dto.py  models.py
database_data/: products.db  products.json
frontend/: Dockerfile  Dockerfile.dev  index.css  index.html  main.jsx  main.tsx  package-lock.json  package.json  tsconfig.json
frontend/components/: Header.jsx  MealDataTable.tsx  MealsComponent.jsx  MealsComponent.tsx  MealsSection.tsx  Navbar.tsx  PlanSection.tsx  PlanWeekSection.tsx  ProductsComponent.jsx  ProductsComponent.tsx  ProductsSection.tsx  ProductsTable.jsx
frontend/components/Plan/: AddMealInput.tsx  SelectedMeals.tsx  WeekSetup.tsx
frontend/src/: App.tsx  MealsService.ts  ProductsService.ts
frontend/src/components/: MealDataTable.tsx  MealsSection.tsx  Navbar.tsx  PlanSection.tsx  ProductsSection.tsx  Utils.ts
frontend/src/components/Meals/: MealsGrid.tsx  Section.tsx
frontend/src/components/Plan/: AddMealInput.tsx  MealAdjustment.tsx  MealTable.tsx  (+3 more)
frontend/src/services/: MealsService.ts  ProductsService.ts
migrations/: env.py
migrations/versions/: 4ddc161c99fe_initialize_database.py  71b58577de58_prepopulate_products_table.py  9df69ad4cc5c_initialize_and_prepopulate.py  de632bff0191_initialize_database.py  e06e07bc7c4f_init_schema.py
(+1 files in other folders)
